# Gemma-Offline-Studio

./: .gitignore  LICENSE  README.md  notice.md  pyproject.toml
agent/: owl_agent.py
agent/owl/utils/: enhanced_role_playing.py
api_server/: api_server.py  gemma_unsloth.py
frontend/: next.config.mjs  package.json
frontend/app/: constant.ts  context.ts  layout.tsx  typing.ts  utils.ts
frontend/app/client/: api.ts  local.ts
frontend/app/components/: chat.module.scss  chat.tsx  home.tsx  settings.tsx  sidebar.tsx  template.tsx
frontend/app/locales/: en.ts
frontend/app/store/: chat.ts  config.ts
frontend/app/utils/: model.tsx
tests/: api-test.py
