[project]
name = "Gemma-Offline-Studio"
version = "0.1.0"
description = "Chatting, streaming, agent tasks, and coding powered by Gemma 3n"
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = [
    "camel-ai[owl]==0.2.73",
    "ipython==9.4.0",
    "kokoro==0.9.4",
    "librosa==0.11.0",
    "mss==10.0.0",
    "opencv-python==4.11.0.86",
    "pip==25.2",
    "sounddevice==0.5.2",
    "thinc==8.3.4",
    "timm==1.0.19",
    "torch==2.7.1+cu128",
    "torchaudio==2.7.1+cu128",
    "torchvision==0.22.1+cu128",
    "unsloth==2025.8.1",
    "spacy==3.8.7",
    "fastapi==0.116.1",
    "xmltodict==0.14.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
